Fixed a couple bugs. Failed to do paradigm shift to pure Page disclosure for Mobile Side Nav (resize transition failed hard)

--- a/src/application-page/SideNavigationPageContainer.module.scss
+++ b/src/application-page/SideNavigationPageContainer.module.scss
@@ -40,7 +40,7 @@
   }
 
   .side-nav-is-open > .side-nav-body {
-    display: none;
+    // display: none;
 
     @include terra-mq-medium-up {
       display: block;
